--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHAJAHAN</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://user-images.githubusercontent.com/97659955/149309179-6e77e3f4-1982-480e-9912-1e7be4cb3835.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
