--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <div class="skill-row">
+      <div class="skill-row">imagesnew/1b4e5789650ac4c919d87c32e153ed48.png
         <h2>Drawing.</h2>
-        <img class="tcc-image" src="imagesnew/1b4e5789650ac4c919d87c32e153ed48.png" width="200" height="150" alt="tcc-image">
+        <img class="tcc-image" src="imagesnew/Art-Logos-1280x720.jpg" width="200" height="150" alt="tcc-image">
         <p> I have completed Technical Certificate Course (TCC) in Drawing.</p>
       </div>
       <div class="skill-row">
         <h2>Curricular Activities.</h2>
-        <img class="NCC-image" src="imagesnew/Art-Logos-1280x720.jpg" width="180" height="200" alt="NCC-image">
+        <img class="NCC-image" src="imagesnew/1b4e5789650ac4c919d87c32e153ed48.png" width="180" height="200" alt="NCC-image">
         <p> I'm an NCC cadet. I had completed my camp in 2020.</p>
       </div>
     </div>
