--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <div class="skill-row">imagesnew/1b4e5789650ac4c919d87c32e153ed48.png
+      <div class="skill-row">
         <h2>Drawing.</h2>
         <img class="tcc-image" src="imagesnew/Art-Logos-1280x720.jpg" width="200" height="150" alt="tcc-image">
         <p> I have completed Technical Certificate Course (TCC) in Drawing.</p>
